# XRB-phot

./: README.md  xrbOpticalAddressBook.py  xrbOpticalCalibration.py  xrbOpticalReduction.py
alipy/.svn/: all-wcprops  dir-prop-base  entries
alipy/alipy/.svn/: all-wcprops  entries
alipy/doc/.svn/: all-wcprops  dir-prop-base  entries
alipy/doc/_static/.svn/: all-wcprops  entries
alipy/doc/_templates/.svn/: all-wcprops  entries
pyfits-3.3/: setup.cfg
pyfits-3.3/lib/pyfits/: version.py
pyfits-3.3/lib/pyfits.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pyraf-2.1.7/: setup.cfg
pyraf-2.1.7/lib/pyraf/: GkiMpl.py  MplCanvasAdapter.py  Ptkplot.py  __init__.py  aqutil.py  cgeneric.py  cl2py.py  clast.py  clcache.py  cllinecache.py  clparse.py  clscan.py  cltoken.py  describe.py  dirdbm.py  dirshelve.py  epar.py  filecache.py  fontdata.py  generic.py  gki.py  gki_psikern_tests.py  gki_sys_tests.py  gkicmd.py  gkigcur.py  gkiiraf.py  gkitkbase.py  gkitkplot.py  graphcap.py  gwm.py  ipython_api.py  iraf.py  irafcompleter.py  irafdisplay.py  irafecl.py  irafexecute.py  iraffunctions.py  irafgwcs.py  irafhelp.py  irafimcur.py  (+24 more)
pyraf-2.1.7/lib/pyraf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyraf-2.1.7/required_pkgs/d2to1/: .travis.yml  setup.cfg
pyraf-2.1.7/required_pkgs/stsci.distutils/: CHANGES.txt  MANIFEST.in  README.txt  setup.cfg  setup.py  tox.ini
pyraf-2.1.7/required_pkgs/stsci.distutils/docs/: Makefile
pyraf-2.1.7/required_pkgs/stsci.distutils/docs/source/: api.rst  conf.py  index.rst
pyraf-2.1.7/required_pkgs/stsci.distutils/stsci/distutils/: release.py
pyraf-2.1.7/required_pkgs/stsci.distutils/stsci/distutils/tests/testpackage/: setup.cfg  setup.py
pyraf-2.1.7/required_pkgs/stsci.distutils/stsci/distutils/tests/testpackage/stsci/testpackage/: __init__.py
pyraf-2.1.7/required_pkgs/stsci.tools/: setup.cfg
pyraf-2.1.7/required_pkgs/stsci.tools/lib/stsci/tools/: alert.py  basicpar.py  capable.py  cfgpars.py  clipboard_helper.py  convertwaiveredfits.py  dialog.py  editpar.py  eparoption.py  filedlg.py  fitsdiff.py  for2to3.py  irafglobals.py  irafutils.py  listdlg.py  minmatch.py  readgeis.py  stpyfits.py  stsci_distutils_hack.py  taskpars.py  teal.py  teal_bttn.py  vtor_checks.py
pyraf-2.1.7/scripts/: pyraf
pyraf-2.1.7/src/: xutil.c
pyraf-2.1.7/tools/: cachecompare.py  cachesearch.py  checkcompileall.py  compileallcl.py  createTarBall.csh  fixcache.py  loadall.py  plotbench.py
