[metadata]
name = stsci.distutils
version = 0.3.8.dev
author = Erik M. Bray
author-email = embray@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
summary = distutils/packaging-related utilities used by some of STScI's packages
description-file = 
    README.txt
    CHANGES.txt
requires-python = >=2.5
requires-dist = 
    setuptools
    d2to1 (>=0.2.5)
classifier = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[files]
packages = 
    stsci
    stsci.distutils
    stsci.distutils.command
    stsci.distutils.tests

[global]
setup-hooks = 
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook

[backwards_compat]
use-2to3 = True
zip-safe = False

[entry_points]
zest.releaser.releaser.before =
    fix_sdist_format = stsci.distutils.release:fix_sdist_format
zest.releaser.postreleaser.before =
    fix_dev_version_template = stsci.distutils.release:fix_dev_version_template
