[metadata]
name = stsci.testpackage
version = 0.1.dev
author = Erik M. Bray
author-email = embray@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
summary = Test package for testing stsci.distutils
description-file =
    README.txt
    CHANGES.txt
requires-python = >=2.5

requires-dist =
    setuptools
    d2to1 (>=0.2.5)

classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[files]
packages =
    stsci
    stsci.testpackage
package_data = stsci.testpackage = package_data/*.txt
data_files = stsci/testpackage/data_files = data_files/*.txt

[extension=stsci.testpackage.testext]
sources = src/testext.c
include_dirs = numpy
optional = True

[global]
setup-hooks =
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook
commands = stsci.distutils.command.build_optional_ext.build_optional_ext

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[install_data]
pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files
